<?xml version="1.0" encoding="utf-8"?><!--订单状态-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_order_status"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_8"
    android:background="@color/white"
    android:paddingBottom="@dimen/dp_12"
    android:paddingLeft="@dimen/dp_12"
    android:paddingRight="@dimen/dp_12">

    <TextView
        android:id="@+id/tv_order_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/order_status"
        android:textColor="@color/word_important"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/click_to_modify"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/sp_10" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_order_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/dingdan_bg" />

    <RelativeLayout
        android:id="@+id/ll_order_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_order_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_32">

        <ImageView
            android:id="@+id/iv_status1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_44"
            android:src="@drawable/dingdan_select" />

        <ImageView
            android:id="@+id/iv_status2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_2_"
            android:layout_toRightOf="@id/iv_status1"
            android:src="@drawable/dingdan_unselect" />

        <ImageView
            android:id="@+id/iv_status3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_2_"
            android:layout_toRightOf="@id/iv_status2"
            android:src="@drawable/dingdan_unselect" />

        <ImageView
            android:id="@+id/iv_status4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_2_"
            android:layout_toRightOf="@id/iv_status3"
            android:src="@drawable/dingdan_unselect" />

        <ImageView
            android:id="@+id/iv_status5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_2_"
            android:layout_toRightOf="@id/iv_status4"
            android:src="@drawable/dingdan_last_unselect" />

        <TextView
            android:id="@+id/tv_status1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/iv_status1"
            android:layout_below="@id/iv_status1"
            android:layout_marginLeft="@dimen/dp_6_"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/place_order"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/sp_10" />

        <TextView
            android:id="@+id/tv_status2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/iv_status2"
            android:layout_below="@id/iv_status1"
            android:layout_marginLeft="@dimen/dp_10_"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/Dealt_with_in"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/sp_10" />

        <TextView
            android:id="@+id/tv_status3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/iv_status3"
            android:layout_below="@id/iv_status1"
            android:layout_marginLeft="@dimen/dp_10_"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/delivered"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/sp_10" />

        <TextView
            android:id="@+id/tv_status4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/iv_status4"
            android:layout_below="@id/iv_status1"
            android:layout_marginLeft="@dimen/dp_18_"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/confirm_goods"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/sp_10" />

        <TextView
            android:id="@+id/tv_status5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/iv_status5"
            android:layout_below="@id/iv_status1"
            android:layout_marginLeft="@dimen/dp_18_"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/finish_order"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/sp_10" />
    </RelativeLayout>
</RelativeLayout>